--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
     container_name: php
     ports:
       - "5173:5173"
+      - "3000:3000"
     volumes:
       - ./docker/php/config/php.ini:/usr/local/etc/php/php.ini
       - ./app:/var/www/html
@@ -32,9 +33,29 @@ services:
     volumes:
       - ./docker/mysql:/etc/mysql/conf.d
       - ./docker/mysql/db:/var/lib/mysql
-  mail:
-    image: mailhog/mailhog:latest
-    container_name: mail
-    ports:
-      - "8025:8025"
-      - "1025:1025"
+  # mail:
+  #   image: mailhog/mailhog:latest
+  #   container_name: mail
+  #   ports:
+  #     - "8025:8025"
+  #     - "1025:1025"
+  # minio:
+  #   image: minio/minio:RELEASE.2021-06-17T00-10-46Z
+  #   container_name: "minio"
+  #   ports:
+  #     - 9090:9000
+  #   environment:
+  #     - MINIO_ACCESS_KEY=minio
+  #     - MINIO_SECRET_KEY=minio123
+  #   entrypoint: sh
+  #   command: -c "
+  #     mkdir -p /data/.minio.sys/buckets;
+  #     cp -r /policies/* /data/.minio.sys/;
+  #     cp -r /export/* /data/;
+  #     /usr/bin/minio server /data;
+  #     "
+  #   volumes:
+  #     - ./storage/data:/data
+  #     - ./storage/export:/export
+  #     - ./storage/config:/root/.minio
+  #     - ./storage/policies:/policies
